[tool.poetry]
name = "door-state-publisher"
version = "0.1.0"
description = "Simple python script that publishes the state of the room door using MQTT"
authors = ["Tim Neumann <neumantm@fius.informatik.uni-stuttgart.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.6.1"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.930"
paho-mqtt-stubs = "^0.1.0"

[tool.black]
line-length = 120
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
